--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ description = "a simple todo list manager"
 anyhow = "1.0.81"
 chrono = "0.4.37"
 clap = { version = "4.5.4", features = ["derive"] }
+colored = "2.1.0"
 home = "0.5.9"
 serde = {version = "1.0.197", features = ["derive"]}
 serde_json = "1.0.115"
